tests/semantic_cases/invalid/typed_param_type_mismatch.ob0
MODULE Main;
VAR x: REAL;
PROCEDURE UseInt(value: INTEGER);
BEGIN
END UseInt;
BEGIN
  UseInt(x)
END Main.
